; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_ni_65xx.c_ni_65xx_alloc_subdevice_private.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_ni_65xx.c_ni_65xx_alloc_subdevice_private.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ni_65xx_subdevice_private = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ni_65xx_subdevice_private* ()* @ni_65xx_alloc_subdevice_private to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ni_65xx_subdevice_private* @ni_65xx_alloc_subdevice_private() #0 {
  %1 = alloca %struct.ni_65xx_subdevice_private*, align 8
  %2 = alloca %struct.ni_65xx_subdevice_private*, align 8
  %3 = load i32, i32* @GFP_KERNEL, align 4
  %4 = call %struct.ni_65xx_subdevice_private* @kzalloc(i32 4, i32 %3)
  store %struct.ni_65xx_subdevice_private* %4, %struct.ni_65xx_subdevice_private** %2, align 8
  %5 = load %struct.ni_65xx_subdevice_private*, %struct.ni_65xx_subdevice_private** %2, align 8
  %6 = icmp eq %struct.ni_65xx_subdevice_private* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store %struct.ni_65xx_subdevice_private* null, %struct.ni_65xx_subdevice_private** %1, align 8
  br label %10

8:                                                ; preds = %0
  %9 = load %struct.ni_65xx_subdevice_private*, %struct.ni_65xx_subdevice_private** %2, align 8
  store %struct.ni_65xx_subdevice_private* %9, %struct.ni_65xx_subdevice_private** %1, align 8
  br label %10

10:                                               ; preds = %8, %7
  %11 = load %struct.ni_65xx_subdevice_private*, %struct.ni_65xx_subdevice_private** %1, align 8
  ret %struct.ni_65xx_subdevice_private* %11
}

declare dso_local %struct.ni_65xx_subdevice_private* @kzalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
